--- a/index.html
+++ b/index.html
@@ -4,10 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="style.css">
     <title>portfolio</title>
 </head>
 <body>
-    <h1></h1>
+    <div class="container">
+        <header>
+            <div class="img-wrapper">
+                <img src="icons/fundo.jpg" alt="">
+            </div>
+            <div class="banner">
+                <h1>Hacker & cybersegurança</h1>
+                <p>Sann</p>
+                <button>Saiba mais</button>
+            </div>
+        </header>
+    </div>
 </body>
 </html>
