:package: menu sidebar

--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 </head>
 <body>
     <div class="container">
+
+        <div class="hamburguer">
+            <div class="line" id="line1"></div>
+            <div class="line" id="line2"></div>
+            <div class="line" id="line3"></div>
+            <span>fechar</span>
+        </div
+
         <header>
             <div class="img-wrapper">
                 <img src="icons/fundo.jpg" alt="">
@@ -23,6 +31,25 @@
                 <button>Saiba mais</button>
             </div>
         </header>
+
+        <div class="sidebar">
+            <nav>
+                <ul class="menu">
+                    <li class="menu-item"><a href="" class="menu-link">home</a></li>
+                    <li class="menu-item"><a href="" class="menu-link">conhecimento</a></li>
+                    <li class="menu-item"><a href="" class="menu-link">projetos</a></li>
+                    <li class="menu-item"><a href="" class="menu-link">contato</a></li>
+                    <li class="menu-item"><a href="" class="menu-link">Orçamento</a></li
+                </ul>
+            </nav>
+            <div class="social-midia">
+                <a href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a>
+                <a href="https://github.com/SanNw"><i class="fab fa-github"></i></a>
+                <a href="https://bitcoin.org/en/"><i class="fab fa-btc"></i></a>
+                <a href="https://discord.com/channels/@me"><i class="fab fa-discord"></i></a>
+            </div>
+        </div>
     </div>
 </body>
+    <script src="menu.js"></script>
 </html>
